# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: gendiff_check.yml
gendiff/: __init__.py  diff.py  formatter.py  generate_diff.py
gendiff/modules/: diff.py  generate_diff.py  open_file.py  parser.py
gendiff/modules/formatters/: apply_format.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_diff.py  test_formatter.py  test_generate_diff.py
tests/fixtures/: diff_result.txt  diff_result_simple.txt  file1_example.json  file1_example.yml  file2.json  file2_example.json  file2_example.yml  file3.json  file4.json  result_example.txt  result_json.txt  result_plain.txt  result_style_json.txt  style_example.txt
