[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The utility that shows differences between two files"
authors = ["Treskun4eg <wagamamanowelli@gmail.com>"]
repository = "https://github.com/Treskun4eg/python-project-50"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.0"
pytest-cov = "^4.0.0"
pytest = "^7.2.1"
ipython = "^8.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"